docs(swagger): update docs
