# docs/swagger.yaml
@@ -1585,44 +1585,7 @@ paths:
       summary: Allows super_admin retrieve all customers in the database.
       tags:
       - super_admin
-  /users:
-    put:
-      consumes:
-      - application/json
-      parameters:
-      - description: Bearer <token>
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: User information
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/handlers.UpdateUser'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: data,msg
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: error
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: error
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Allows the current user update their account information.
-      tags:
-      - users
-  /users/{user_id}:
+  /users/{email}:
     delete:
       parameters:
       - description: Bearer <token>
@@ -1654,6 +1617,47 @@ paths:
             additionalProperties: true
             type: object
       summary: Allows the current user delete their account.
+      tags:
+      - users
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Bearer <token>
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User information
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.UpdateUser'
+      - description: User email
+        in: path
+        name: email
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: data,msg
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Allows the current user update their account information.
       tags:
       - users
 swagger: "2.0"
